# registration-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.test  MESSAGE_LOGGING.md  MIGRATION_README.md  Makefile  PERMISSIONS_GUIDE.md  README.md  README_PERMISSIONS.md  STAFF_COUNSELOR_FIELDS.md  docker-compose.yml  dump.sh  migrate_add_staff_counselor_fields.py  migrate_add_trip_attendance.py  migrate_add_will_drive.py  migrate_users.py  pyproject.toml  requirements.txt  scenario.json  setup_backup_cron.sh  start.sh  task.md  users.csv
bot/: config.py  main.py
bot/database/: google_sheets.py  models.py
src/: admin_commands.py  bot_logging.py  chat_tracker.py  config.py  constants.py  database.py  error_notifier.py  feedback_handler.py  feedback_storage.py  filters.py  formatters.py  handle_ask_again.py  handle_registration.py  handle_send_cant_ride.py  handle_send_cant_ride_missed.py  handle_send_message.py  handle_send_message_all_riders.py  keyboards.py  logger.py  main.py  message_formatter.py  message_logger.py  message_sender.py  messages.py  milestone_notifier.py  models.py  permission_helpers.py  permissions.py  registration_config.py  registration_flow.py  registration_handler.py  send_message_with_formatting.txt  settings.py  spreadsheets.py  sqlite_persistence.py  state_handler.py  state_manager.py  storage.py  texts.py  user.py  (+3 more)
src/survey/: auto_collectors.py  formatters.py  skip_conditions.py  validators.py
tests/: conftest.py  pytest.ini  test_main.py  test_permissions.py
tests/integration/: test_bot.py  test_orm.py  test_registration.py  test_registration_flow.py
tests/unit/: test_auto_collectors.py  test_formatters.py  test_message_logger.py  test_message_sender.py  test_milestone_notifier.py  test_permissions.py  test_registration_config.py  test_skip_conditions.py  test_survey_validators.py  test_validators.py
